# models/operations/orders/getOrders.js
@@ -1,7 +1,7 @@
 let Order = require("../../schema/Order");
 
 let getOrder = function(req, res, callback) {
-    Order.find({"openStatus": true}, function(err, orders){
+    Order.find({"openStatus": true}, ["_id", "createdDate", "amount"] ,function(err, orders){
         if(err){
             callback(err, null);
         } else{
